--- a/css/main.css
+++ b/css/main.css
@@ -116,6 +116,10 @@ body {
     background-color: var(--meco-accent-blue);
 }
 
+.services-active #services-link:focus {
+    background-color: transparent;
+}
+
 #services-link:hover, #services-link:focus {
     box-shadow: inset 0px 0px 0px 5px var(--meco-accent-blue);
 }
@@ -150,7 +154,7 @@ body {
 }
 
 #drop-down-content {
-    display: flex;
+    display: none;
     padding: 20px;
     margin-right: -200px;
     flex-direction: column;
@@ -160,6 +164,7 @@ body {
 }
 
 .services-active #drop-down-content {
+    display: flex;
     opacity: 1;
 }
 
@@ -173,7 +178,7 @@ body {
     transition: background-position 0.3s;
 }
 
-.drop-down-item-link:hover {
+.drop-down-item-link:hover, .drop-down-item-link:focus {
     background-image: url("../images/graphic-elements/list-item-arrow-hover.svg");
     background-position: 20px;
     color: var(--meco-blue-dark);
@@ -196,7 +201,7 @@ body {
     border-radius: 30px;
 }
 
-#cta-nav-button {
+#cta-nav-link {
     color: var(--meco-white);
     background-color: var(--meco-blue);
     padding: 0 20px;
@@ -208,11 +213,11 @@ body {
     box-shadow: inset 0px 0px 0px 1px var(--meco-blue), 0px 0px 0px 0px var(--meco-blue);
 }
 
-#cta-nav-link:hover #cta-nav-button, #cta-nav-link:focus #cta-nav-button {
+#cta-nav-link:hover, #cta-nav-link:focus {
     box-shadow: inset 0px 0px 0px 1px var(--meco-blue), 0px 0px 0px 3px var(--meco-blue);
 }
 
-.navigation-bar-scroll #cta-nav-button {
+.navigation-bar-scroll #cta-nav-link {
     transform: translateX(0px);
     opacity: 100%;
     transition: transform 0.2s 0.5s, opacity 0.2s 0.5s, box-shadow 0.2s 0s;
