--- a/css/fonts.css
+++ b/css/fonts.css
@@ -74,6 +74,30 @@
     line-height: 36px;
 }
 
+.text-label {
+    font-family: poppins, sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    letter-spacing: 0.038em;
+    line-height: 36px;
+}
+
+.text-input {
+    font-family: poppins, sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    letter-spacing: 0.042em;
+    line-height: 42px;
+}
+
+.text-input-hint {
+    font-family: poppins, sans-serif;
+    font-weight: 300;
+    font-size: 16px;
+    letter-spacing: 0.038em;
+    line-height: 36px;
+}
+
 .text-footer {
     font-family: poppins, sans-serif;
     font-weight: 500;
