--- a/css/colors.css
+++ b/css/colors.css
@@ -1,17 +1,22 @@
 
 :root {
+
+    /* main */
     --meco-blue: #3333ff;
     --meco-orange: #ff5533;
     --meco-gray: #707070;
     --meco-white: #ffffff;
     
+    /* light */
     --meco-blue-light: #e5e5ff;
     --meco-orange-light: #ffeae5;
     --meco-gray-light: #e6e6e6;
     --meco-accent-blue: #CCCCFF;
     --meco-off-white: #fafafa;
 
+    /* dark*/
     --meco-blue-dark: #292966;
     --meco-orange-dark: #663329;
     --meco-gray-dark: #333333;
+    
 }
