--- a/css/index-main.css
+++ b/css/index-main.css
@@ -14,247 +14,6 @@ body {
     background-color: var(--meco-off-white);
 }
 
-.navigation-bar {
-    z-index: 1;
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    width: 100%;
-    height: 80px;
-    background-color: transparent;
-    transition-property: all;
-    transition-duration: 0.5s;
-    transition-delay: 0.2s;
-}
-
-.navigation-bar-scroll {
-    background-color: var(--meco-white);
-    box-shadow: 0px 0px 2px 2px var(--meco-accent-blue);
-    transition-delay: 0s;
-}
-
-#content-box-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    padding: 0 150px;
-    width: 100%;
-    max-width: 1300px;
-    height: 100%;
-    transition-property: all;
-    transition-duration: 0.5s;
-    transition-delay: 0.2s;
-}
-
-.navigation-bar-scroll #content-box-nav {
-    padding: 0 20px;
-    transition-delay: 0s;
-}
-
-#logo-nav {
-    height: 80px;
-    padding: 20px 0;
-}
-
-#logo-nav-link:focus #logo-nav {
-    box-shadow: inset 0px 0px 0px 5px #CCCCFF;
-    transition: box-shadow 0.2s;
-}
-
-#logo-nav-link:focus #logo-nav #letter-e {
-    transform: rotateZ(45deg);
-    transition: transform 0.3s;
-}
-
-#logo-nav-link:focus #chapeau {
-    transform: translateY(-7%);
-    transition: transform 0.3s;
-}
-
-#navigation-bar-list {
-    display: flex;
-    align-items: center;
-    list-style: none;
-    transform: translateX(326px);
-    transition: transform 0.5s 0.2s;
-}
-
-.navigation-bar-scroll #navigation-bar-list {
-    transform: translateX(0px);
-    transition: transform 0.5s 0s;
-}
-
-#navigation-bar-list .nav-item {
-    display: flex;
-    align-items: center;
-    height: 80px;
-    margin-left: 20px;
-}
-
-.nav-item#services {
-    flex-direction: column;
-    align-items: flex-start;
-    overflow: hidden;
-}
-
-#navigation-bar-list li a {
-    display: flex;
-    align-items: center;
-}
-
-#navigation-bar-list li a#cta-nav-link {
-    margin-left: 50px;
-}
-
-#services-link {
-    cursor: default;
-    display: flex;
-    align-items: center;
-    box-sizing: border-box;
-    height: 80px;
-    padding: 0 30px;
-    transition: box-shadow 0.2s, background-color 0.3s;
-}
-
-.services-active #services-link {
-    background-color: var(--meco-accent-blue);
-}
-
-.services-active #services-link:focus {
-    background-color: transparent;
-}
-
-#services-link:hover, #services-link:focus {
-    box-shadow: inset 0px 0px 0px 5px var(--meco-accent-blue);
-}
-
-#services-title {
-    display: flex;
-    align-items: center;
-    height: 80px;
-}
-
-.drop-down-title {
-    color: var(--meco-gray-dark);
-    margin-right: 15px;
-}
-
-#services-link:hover .drop-down-title, #services-link:focus .drop-down-title, .services-active .drop-down-title {
-    color: var(--meco-blue-dark);
-}
-
-.drop-down-arrow {
-    background-image: url("../images/graphic-elements/drop-down-arrow.svg"), url("../images/graphic-elements/drop-down-arrow-hover.svg");
-    background-repeat: no-repeat;
-    height: 10px;
-    width: 15px;
-    transition: transform 0.5s;
-}
-
-#services-link:hover .drop-down-arrow, #services-link:focus .drop-down-arrow, .services-active .drop-down-arrow {
-    background-image:  url("../images/graphic-elements/drop-down-arrow-hover.svg");
-}
-
-.services-active#services {
-    overflow: visible;
-}
-
-.services-active .drop-down .drop-down-arrow {
-    transform: rotateZ(180deg);
-}
-
-#drop-down-content {
-    display: none;
-    padding: 20px;
-    margin-right: -200px;
-    flex-direction: column;
-    background-color: var(--meco-accent-blue);
-    animation: opacity 0.3s;
-}
-
-@keyframes opacity {
-    from {opacity: 0;}
-    to {opacity: 1}
-}
-
-.services-active #drop-down-content {
-    display: flex;
-    animation: opacity 0.3s;
-}
-
-.drop-down-item-link {
-    text-indent: 40px;
-    background-image: url("../images/graphic-elements/list-item-arrow.svg"), url("../images/graphic-elements/list-item-arrow-hover.svg");
-    background-size: 10px;
-    background-position: 15px;
-    background-repeat: no-repeat;
-    color: var(--meco-gray-dark);
-    transition: background-position 0.3s;
-}
-
-.drop-down-item-link:hover, .drop-down-item-link:focus {
-    background-image: url("../images/graphic-elements/list-item-arrow-hover.svg");
-    background-position: 20px;
-    color: var(--meco-blue-dark);
-}
-
-.link {
-    color: var(--meco-gray-dark);
-    height:30px;
-    transition: box-shadow 0.2s;
-}
-
-.link:hover, .link:focus {
-    color: var(--meco-blue-dark);
-    box-shadow: var(--meco-accent-blue) 0 5px;
-}
-
-.button-special-private:focus {
-    display: flex;
-    border: solid 0px transparent;
-    border-radius: 30px;
-}
-
-.button-special-private {
-    padding: 0 20px;
-    color: var(--meco-white);
-    background-color: var(--meco-blue);
-    border-width: 0;
-    border-radius: 30px;
-    box-shadow: inset 0px 0px 0px 1px var(--meco-blue), 0px 0px 0px 0px var(--meco-blue);
-    transition: box-shadow 0.2s;
-}
-
-#cta-nav-link {
-    cursor: default;
-    opacity: 0;
-    transition: box-shadow 0.2s 0s;
-    animation: cta-translate-right 0.4s;
-}
-
-@keyframes cta-translate-right {
-    0% {transform: translateX(0px); opacity: 1;}
-    50% {transform: translateX(50px); opacity: 0;}
-    100% {transform: translateX(5000px); opacity: 0;}
-}
-
-.button-special-private:hover, .button-special-private:focus {
-    box-shadow: inset 0px 0px 0px 1px var(--meco-blue), 0px 0px 0px 3px var(--meco-blue);
-}
-
-.navigation-bar-scroll #cta-nav-link {
-    cursor: pointer;
-    transform: translateX(0px);
-    opacity: 100%;
-    transition: box-shadow 0.2s 0s;
-    animation: cta-translate-left 0.4s;
-}
-
-@keyframes cta-translate-left {
-    from {transform: translateX(50px); opacity: 0;}
-    to {transform: translateX(0px); opacity: 1;}
-}
-
 #pattern {
     background-image: url(../images/patterns/arrow-pattern.svg);
     background-size: 150px;
@@ -386,19 +145,6 @@ body {
     align-items: center;
     justify-content: space-evenly;
     height: 100%;
-}
-
-.button-normal-public {
-    padding: 0 20px;
-    color: var(--meco-gray-dark);
-    background-color: var(--meco-white);
-    border-width: 0;
-    border-radius: 30px;
-    box-shadow: 0px 0px 0px 3px var(--meco-gray-dark);
-}
-
-.button-normal-public:hover, .button-normal-public:focus {
-    box-shadow: 0px 0px 0px 5px var(--meco-gray-dark);
 }
 
 #content-box-faq {
@@ -623,60 +369,7 @@ body {
     align-items: center;
 }
 
-#newsletter-email-input-label {
-    color: var(--meco-gray-dark);
-}
-
-#email-input-box {
-    display: flex;
-    flex-direction: column;
-}
-
-#newsletter-email-input {
-    box-shadow: 0px 0px 0px 3px var(--meco-accent-blue);
-    border: none;
-    color: var(--meco-gray-dark);
-    width: 540px;
-    height: 50px;
-    text-indent: 20px;
-}
-
-#newsletter-email-input::placeholder {
-    color: var(--meco-white);
-}
-
-#newsletter-email-input:hover::placeholder, #newsletter-email-input:focus::placeholder {
-    color: var(--meco-blue);
-}
-
-.email-input-box-invalid #newsletter-email-input:not(:focus) {
-    color: red;
-    box-shadow: 0px 0px 0px 3px red;
-}
-
-.email-input-box-valid #newsletter-email-input:not(:focus) {
-    color: var(--meco-blue);
-    box-shadow: 0px 0px 0px 3px var(--meco-blue);
-}
-
-#newsletter-email-input:focus {
-    box-shadow: 0px 0px 0px 3px var(--meco-gray-dark);
-}
-
-#newsletter-email-input-hint {
-    opacity: 0;
-    color: red;
-    transition: all 0.2s;
-}
-
-.email-input-box-valid #newsletter-email-input-hint {
-    opacity: 0;
-}
-.email-input-box-invalid #newsletter-email-input-hint {
-    opacity: 1;
-}
-
-#newsletter-email-submit {
+#email-submit-box {
     margin-left: 20px;
 }
 
