--- a/css/app-main.css
+++ b/css/app-main.css
@@ -61,6 +61,7 @@ body {
 
 #buttons-box {
     width: 1000px;
+    height: 60px;
     margin-bottom: 30px;
     display: flex;
     align-items: center;
