--- a/css/app-main.css
+++ b/css/app-main.css
@@ -1,3 +1,13 @@
+/* go to */
+
+#button-go-to {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    cursor: pointer;
+    z-index: 2;
+}
+
 body {
     height: 100vh;
     background-image: url(../images/patterns/arrow-pattern.svg);
